--- a/.env
+++ b/.env
@@ -1,1 +1,40 @@
-GITHUB_TOKEN=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
+NODE_ENV=development
+PORT=3000
+BASE_URL=http://localhost:3000
+TRUST_PROXY=false
+SECURE_COOKIES=false
+
+# GitHub
+GITHUB_TOKEN=
+
+# Okta OIDC
+OKTA_ISSUER=        # e.g., https://dev-XXXXX.okta.com/oauth2/default
+OKTA_CLIENT_ID=
+OKTA_CLIENT_SECRET= # backend flow only; keep in secret manager
+OKTA_SCOPES=openid profile email groups offline_access
+OKTA_REDIRECT_URI=
+OKTA_POST_LOGOUT_REDIRECT_URI=
+OKTA_AUDIENCE=      # typically your client ID or custom API audience
+
+# CORS
+CORS_ORIGIN=http://localhost:3000
+
+# Sessions
+SESSION_SECRET=changeme-super-secret
+
+# RBAC mapping examples
+OKTA_GROUP_ROLE_MAP=admin:App-Admins|SuperUsers,editor:Editors
+
+# Google OIDC
+GOOGLE_CLIENT_ID=
+GOOGLE_CLIENT_SECRET=
+GOOGLE_ISSUER=https://accounts.google.com
+GOOGLE_REDIRECT_URI=http://localhost:3000/auth/google/callback
+GOOGLE_POST_LOGOUT_REDIRECT_URI=http://localhost:3000/
+GOOGLE_SCOPES=openid profile email offline_access
+
+# Optional: map Google identities to roles
+# By specific email(s):   admin:user1@example.com|user2@example.com,editor:editor@example.com
+GOOGLE_EMAIL_ROLE_MAP=
+# By hosted domain(s):    admin:yourcompany.com|subsidiary.co
+GOOGLE_HD_ROLE_MAP=
