Refactor OIDC client loading to use dynamic import
Replaces static import of 'openid-client' with a dynamic import to improve startup performance and avoid unnecessary module loading. Updates OIDC and Google client initialization to use the new dynamic import helper. Minor formatting changes in test and HTML/JS files.

--- a/.env
+++ b/.env
@@ -5,7 +5,7 @@ TRUST_PROXY=false
 SECURE_COOKIES=false
 
 # GitHub
-GITHUB_TOKEN=
+GITHUB_TOKEN=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
 
 # Okta OIDC
 OKTA_ISSUER=        # e.g., https://dev-XXXXX.okta.com/oauth2/default
@@ -26,8 +26,8 @@ SESSION_SECRET=changeme-super-secret
 OKTA_GROUP_ROLE_MAP=admin:App-Admins|SuperUsers,editor:Editors
 
 # Google OIDC
-GOOGLE_CLIENT_ID=
-GOOGLE_CLIENT_SECRET=
+GOOGLE_CLIENT_ID=191253952930-doqk5pcfmbpfrbe70uno9ufb4sb05112.apps.googleusercontent.com
+GOOGLE_CLIENT_SECRET=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
 GOOGLE_ISSUER=https://accounts.google.com
 GOOGLE_REDIRECT_URI=http://localhost:3000/auth/google/callback
 GOOGLE_POST_LOGOUT_REDIRECT_URI=http://localhost:3000/
