Remove Google OIDC, enforce Okta-only SSO and protect API routes
This commit removes all Google OIDC authentication logic and configuration, refactors the OIDC flow to use only Okta, and updates the login page to reflect Okta-only SSO. All /api routes are now protected by authentication middleware. Adds a test suite to verify API route protection. Updates dependencies to include node-fetch and related packages. Removes the Okta integration guide README.

--- a/.env
+++ b/.env
@@ -9,14 +9,13 @@ SECURE_COOKIES=false
 GITHUB_TOKEN=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
 
 # Okta OIDC
-OKTA_ISSUER=        # e.g., https://dev-XXXXX.okta.com/oauth2/default
-OKTA_CLIENT_ID=
-OKTA_CLIENT_SECRET= # backend flow only; keep in secret manager
-OKTA_SCOPES=openid profile email groups offline_access
-OKTA_REDIRECT_URI=
-OKTA_POST_LOGOUT_REDIRECT_URI=
-OKTA_AUDIENCE=      # typically your client ID or custom API audience
-
+OKTA_ISSUER=https://integrator-2277447.okta.com/oauth2/default
+OKTA_CLIENT_ID=0oawn37ccvyo8ou6i697
+OKTA_CLIENT_SECRET=pziN2CahZ3SYTlLAzoPSpbTjXL5ASfamaUU617uTWMniRPw7lrEkQuqt_jeqbbHc
+OKTA_SCOPES=openid profile email
+OKTA_REDIRECT_URI=http://localhost:3000/auth/callback
+OKTA_POST_LOGOUT_REDIRECT_URI=http://localhost:3000/
+OKTA_AUDIENCE=openid profile email groups offline_access
 # CORS
 CORS_ORIGIN=http://localhost:3000
 
