--- a/package.json
+++ b/package.json
@@ -9,23 +9,29 @@
     "test": "jest"
   },
   "dependencies": {
-    "express": "^4.18.2",
-    "cors": "^2.8.5",
     "axios": "^1.6.0",
-    "dotenv": "^16.3.1",
-    "helmet": "^7.1.0",
     "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
     "express-session": "^1.17.3",
-    "openid-client": "^6.2.4",
+    "helmet": "^7.1.0",
     "jose": "^5.9.3",
+    "node-fetch": "^3.3.2",
+    "openid-client": "^6.2.4",
     "uuid": "^9.0.1"
   },
   "devDependencies": {
-    "nodemon": "^3.0.1",
     "jest": "^29.7.0",
+    "nodemon": "^3.0.1",
     "supertest": "^6.3.4"
   },
-  "keywords": ["eveos", "fixes", "commits", "web-app"],
+  "keywords": [
+    "eveos",
+    "fixes",
+    "commits",
+    "web-app"
+  ],
   "author": "EVE-OS Fix Finder",
   "license": "MIT"
-} 
+}
