Add Redis session store and secure token management
Integrated Redis for session storage using connect-redis and added secure encryption and storage of sensitive tokens, including support for Cloudflare D1 as a secondary token store. Updated environment variables, improved logout and token management logic, and enhanced the login and settings UI with a new favicon and design tweaks.

--- a/.env
+++ b/.env
@@ -5,9 +5,6 @@ BASE_URL=http://localhost:3000
 TRUST_PROXY=false
 SECURE_COOKIES=false
 
-# GitHub
-GITHUB_TOKEN=ghp_9y05bKWzs8XzOYY
-
 # Okta OIDC
 OKTA_ISSUER=https://integrator-2277447.okta.com/oauth2/default
 OKTA_CLIENT_ID=0oawn37ccvyo8ou6i697
@@ -16,25 +13,21 @@ OKTA_SCOPES=openid profile email
 OKTA_REDIRECT_URI=http://localhost:3000/auth/callback
 OKTA_POST_LOGOUT_REDIRECT_URI=http://localhost:3000/
 OKTA_AUDIENCE=openid profile email groups offline_access
-# CORS
-CORS_ORIGIN=http://localhost:3000
+
+
 
 # Sessions
 SESSION_SECRET=changeme-super-secret
+TOKEN_ENCRYPTION_KEY=base64-encoded-32-byte-key==
+REDIS_URL=redis://127.0.0.1:6379
+REDIS_USE_TLS=false
+REDIS_SESSION_PREFIX=sess:
 
 # RBAC mapping examples
 OKTA_GROUP_ROLE_MAP=admin:App-Admins|SuperUsers,editor:Editors
 
-# Google OIDC
-GOOGLE_CLIENT_ID=191253952930-doqk5pcfmbpfrbe70uno9ufb4sb05112.apps.googleusercontent.com
-GOOGLE_CLIENT_SECRET=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
-GOOGLE_ISSUER=https://accounts.google.com
-GOOGLE_REDIRECT_URI=http://localhost:3000/auth/google/callback
-GOOGLE_POST_LOGOUT_REDIRECT_URI=http://localhost:3000/
-GOOGLE_SCOPES=openid profile email offline_access
-
-# Optional: map Google identities to roles
-# By specific email(s):   admin:user1@example.com|user2@example.com,editor:editor@example.com
-GOOGLE_EMAIL_ROLE_MAP=
-# By hosted domain(s):    admin:yourcompany.com|subsidiary.co
-GOOGLE_HD_ROLE_MAP=
+# Cloudflare D1 secure token storage
+CLOUDFLARE_ACCOUNT_ID=
+CLOUDFLARE_D1_DATABASE_ID=
+CLOUDFLARE_API_TOKEN=
+CLOUDFLARE_D1_TOKEN_TABLE=user_tokens
