--- a/package.json
+++ b/package.json
@@ -15,10 +15,12 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
+    "connect-redis": "^7.1.0",
     "helmet": "^7.1.0",
     "jose": "^5.9.3",
     "node-fetch": "^3.3.2",
     "openid-client": "^6.2.4",
+    "redis": "^4.6.13",
     "uuid": "^9.0.1"
   },
   "devDependencies": {
